# NULLXES-OMEGA-ECI

./: .gitignore  README.md  pyproject.toml
configs/data/: dataset_registry.yaml
configs/eval/: agi85_targets.yaml
configs/infra/: h200_b200_profiles.yaml  runpod_cluster_template.yaml
configs/model/: eci_moe_220b.yaml
configs/policies/: local_execution_policy.yaml
configs/training/: runpod_posttrain.yaml  runpod_pretrain.yaml
data/identity/: omega_identity_seed.jsonl
docs/: 00_PROJECT_CHARTER.md  01_IMPLEMENTATION_STAGES.md  02_LIBRARY_STACK.md  03_ARCHITECTURE_BLUEPRINT.md  04_RUNPOD_OPERATIONS.md  05_BENCHMARK_AND_RISK.md  06_EXECUTION_TIMELINE.md  07_NEXT_ACTIONS.md
scripts/data/: README.md  download_hf_datasets.ps1  download_hf_datasets.sh
scripts/runpod/: README.md  submit_posttrain.sh  submit_pretrain.sh  sync_checkpoints.sh
src/nullxes_omega_eci/: __init__.py
src/nullxes_omega_eci/contracts/: embodiment.py  memory.py  planning.py  router.py  tooling.py  types.py
src/nullxes_omega_eci/embodiment/: bridge.py
src/nullxes_omega_eci/memory/: memory_manager.py
src/nullxes_omega_eci/router/: hierarchical_router.py
src/nullxes_omega_eci/runtime/: config_loader.py
src/nullxes_omega_eci/tools/: tool_bridge.py
