[project]
name = "nullxes-omega-eci"
version = "0.1.0"
description = "Architecture and contracts for NULLXES OMEGA ECI"
requires-python = ">=3.11"
authors = [
  { name = "NULLXES LLC" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7"
]

[project.optional-dependencies]
train = [
  "torch>=2.5",
  "transformer-engine>=1.10",
  "flash-attn>=2.6",
  "hydra-core>=1.3"
]
serve = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "vllm>=0.6"
]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
  "mypy>=1.11"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

